--- a/src/components/jumbotron/index.css
+++ b/src/components/jumbotron/index.css
@@ -1,6 +1,6 @@
 .jumbotron {
     height: 100%;
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    flex-grow: 3;
 }
